website/versioned_docs/version-1.8.0/api-unittype.md
---
id: version-1.8.0-api-unittype
title: UnitType
original_id: api-unittype
---



The name of a unit like '`kilogram`' or '`terabyte`'.

### Syntax

<pre class="syntax">
'acre' | 'acre-foot' | 'ampere' ... 'week' | 'yard' | 'year'
</pre>

### Values

  - 'acre'
  - 'acre-foot'
  - 'ampere'
  - 'arc-minute'
  - 'arc-second'
  - 'astronomical-unit'
  - 'atmosphere'
  - 'bar'
  - 'barrel'
  - 'beaufort'
  - 'bit'
  - 'british-thermal-unit'
  - 'bu-jp'
  - 'bushel'
  - 'byte'
  - 'calorie'
  - 'candela'
  - 'carat'
  - 'celsius'
  - 'centiliter'
  - 'centimeter'
  - 'century'
  - 'cho'
  - 'cubic-centimeter'
  - 'cubic-foot'
  - 'cubic-inch'
  - 'cubic-kilometer'
  - 'cubic-meter'
  - 'cubic-mile'
  - 'cubic-yard'
  - 'cup'
  - 'cup-jp'
  - 'cup-metric'
  - 'dalton'
  - 'day'
  - 'day-person'
  - 'decade'
  - 'deciliter'
  - 'decimeter'
  - 'degree'
  - 'dessert-spoon'
  - 'dessert-spoon-imperial'
  - 'dot'
  - 'dot-per-centimeter'
  - 'dot-per-inch'
  - 'dram'
  - 'drop'
  - 'dunam'
  - 'earth-mass'
  - 'earth-radius'
  - 'electronvolt'
  - 'em'
  - 'fahrenheit'
  - 'fathom'
  - 'fluid-ounce'
  - 'fluid-ounce-imperial'
  - 'foodcalorie'
  - 'foot'
  - 'fun'
  - 'furlong'
  - 'g-force'
  - 'gallon'
  - 'gallon-imperial'
  - 'gasoline-energy-density'
  - 'gigabit'
  - 'gigabyte'
  - 'gigahertz'
  - 'gigawatt'
  - 'grain'
  - 'gram'
  - 'hectare'
  - 'hectoliter'
  - 'hectopascal'
  - 'hertz'
  - 'horsepower'
  - 'hour'
  - 'inch'
  - 'inch-ofhg'
  - 'item'
  - 'jigger'
  - 'jo-jp'
  - 'joule'
  - 'karat'
  - 'kelvin'
  - 'ken'
  - 'kilobit'
  - 'kilobyte'
  - 'kilocalorie'
  - 'kilogram'
  - 'kilohertz'
  - 'kilojoule'
  - 'kilometer'
  - 'kilometer-per-hour'
  - 'kilopascal'
  - 'kilowatt'
  - 'kilowatt-hour'
  - 'kilowatt-hour-per-100-kilometer'
  - 'knot'
  - 'koku'
  - 'kosaji'
  - 'light-year'
  - 'liter'
  - 'liter-per-100-kilometer'
  - 'liter-per-kilometer'
  - 'lumen'
  - 'lux'
  - 'megabit'
  - 'megabyte'
  - 'megahertz'
  - 'megaliter'
  - 'megapascal'
  - 'megapixel'
  - 'megawatt'
  - 'meter'
  - 'meter-per-second'
  - 'meter-per-square-second'
  - 'microgram'
  - 'micrometer'
  - 'microsecond'
  - 'mile'
  - 'mile-per-gallon'
  - 'mile-per-gallon-imperial'
  - 'mile-per-hour'
  - 'mile-scandinavian'
  - 'milliampere'
  - 'millibar'
  - 'milligram'
  - 'milligram-ofglucose-per-deciliter'
  - 'milliliter'
  - 'millimeter'
  - 'millimeter-ofhg'
  - 'millimole-per-liter'
  - 'millisecond'
  - 'milliwatt'
  - 'minute'
  - 'mole'
  - 'month'
  - 'nanometer'
  - 'nanosecond'
  - 'nautical-mile'
  - 'newton'
  - 'newton-meter'
  - 'ohm'
  - 'osaji'
  - 'ounce'
  - 'ounce-troy'
  - 'parsec'
  - 'pascal'
  - 'percent'
  - 'permille'
  - 'permillion'
  - 'permyriad'
  - 'petabyte'
  - 'picometer'
  - 'pinch'
  - 'pint'
  - 'pint-metric'
  - 'pixel'
  - 'pixel-per-centimeter'
  - 'pixel-per-inch'
  - 'point'
  - 'pound'
  - 'pound-force'
  - 'pound-force-foot'
  - 'pound-force-per-square-inch'
  - 'quart'
  - 'quart-imperial'
  - 'quarter'
  - 'radian'
  - 'revolution'
  - 'ri-jp'
  - 'rin'
  - 'sai'
  - 'se-jp'
  - 'second'
  - 'shaku'
  - 'shaku-cloth'
  - 'shaku-length'
  - 'solar-luminosity'
  - 'solar-mass'
  - 'solar-radius'
  - 'square-centimeter'
  - 'square-foot'
  - 'square-inch'
  - 'square-kilometer'
  - 'square-meter'
  - 'square-mile'
  - 'square-yard'
  - 'stone'
  - 'sun'
  - 'tablespoon'
  - 'teaspoon'
  - 'temperature'
  - 'terabit'
  - 'terabyte'
  - 'therm-us'
  - 'to-jp'
  - 'ton'
  - 'tonne'
  - 'volt'
  - 'watt'
  - 'week'
  - 'yard'
  - 'year'

{%refs UnitType}
